# fanstake

./: .gitignore  Anchor.toml  Cargo.toml  package.json
app/: package-lock.json  package.json
app/public/: llms.txt  manifest.json  pitch.html  robots.txt
app/public/.well-known/: brand-facts.json
app/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/src/app/api/activity/[mint]/: route.ts
app/src/app/api/activity/global/: route.ts
app/src/app/api/auth/spotify/: route.ts
app/src/app/api/auth/spotify/callback/: route.ts
app/src/app/api/boost/active/: route.ts
app/src/app/api/curve/[mint]/: route.ts
app/src/app/api/fetch-audius-embed/: route.ts
app/src/app/api/fetch-metadata/: route.ts
app/src/app/api/holders/[mint]/: route.ts
app/src/app/api/portfolio/[wallet]/: route.ts
app/src/app/api/upload-image/: route.ts
app/src/app/api/upload-metadata/: route.ts
app/src/app/artist/[mint]/: layout.tsx  page.tsx
app/src/app/dashboard/[mint]/: page.tsx
app/src/app/embed/[mint]/: page.tsx
app/src/app/launch/: page.tsx
app/src/app/portfolio/: page.tsx
app/src/components/: BondingCurveChart.tsx  BoostModal.tsx  EditProfileModal.tsx  Header.tsx  HolderGate.tsx  MetaMaskWarning.tsx  QRConnect.tsx  SpotifyVerifyBanner.tsx  WalletButton.tsx  WalletModal.tsx  WalletProvider.tsx
app/src/hooks/: useProgram.ts
app/src/lib/: badges.ts  fanstake.json  fanstake.ts  verified.ts
pitch-deck/: index.html
programs/fanstake/: Cargo.toml
programs/fanstake/src/: lib.rs
scripts/: init-mainnet.js  init-mainnet.ts  initialize.ts
tests/: fanstake.ts
(+1 files in other folders)
