[package]
name = "fanstake"
version = "0.1.0"
description = "FanStake — The stock market for music artists"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanstake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
